Created class 'Telegram', created method for getting updates, created simple main class

--- a/jbot/nbproject/project.properties
+++ b/jbot/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/jbot
 excludes=
+file.reference.json-20211205.jar=..\\libs\\json-20211205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Telegram_API.jar}
+    ${reference.Telegram_API.jar}:\
+    ${file.reference.json-20211205.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
