--- a/Telegram.API/nbproject/project.properties
+++ b/Telegram.API/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Telegram.API
 endorsed.classpath=
 excludes=
-file.reference.json-20211205.jar-1=..\\libs\\json-20211205.jar
+file.reference.json-20211205.jar=..\\libs\\json-20211205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20211205.jar-1}
+    ${file.reference.json-20211205.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
