creata geolib,  creata classe entity

--- a/GeoLib/nbproject/project.properties
+++ b/GeoLib/nbproject/project.properties
@@ -28,18 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/jbot.jar
+dist.jar=${dist.dir}/GeoLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/jbot
+dist.jlink.output=${dist.jlink.dir}/GeoLib
 excludes=
-file.reference.json-20211205.jar=..\\libs\\json-20211205.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.Telegram_API.jar}:\
-    ${file.reference.json-20211205.jar}:\
-    ${reference.GeoLib.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=16
-javac.target=16
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -74,16 +70,10 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=jbot
-main.class=jbot.Jbot
-manifest.file=manifest.mf
+jlink.launcher.name=GeoLib
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.GeoLib=../GeoLib
-project.Telegram_API=../Telegram.API
-reference.GeoLib.jar=${project.GeoLib}/dist/GeoLib.jar
-reference.Telegram_API.jar=${project.Telegram_API}/dist/Telegram.API.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
