--- a/Telegram.API/nbproject/private/private.properties
+++ b/Telegram.API/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Davide\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\bianchi_davide\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
