--- a/jbot/nbproject/private/private.properties
+++ b/jbot/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Davide\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\bianchi_davide\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
