Invio della posizione attraverso la posizione rilevata dal GPS del dispositivo

--- a/Telegram.API/nbproject/project.properties
+++ b/Telegram.API/nbproject/project.properties
@@ -39,7 +39,8 @@ file.reference.json-20211205.jar=..\\libs\\json-20211205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20211205.jar}
+    ${file.reference.json-20211205.jar}:\
+    ${reference.GeoLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,6 +79,8 @@ jlink.launcher.name=Telegram.API
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.GeoLib=../GeoLib
+reference.GeoLib.jar=${project.GeoLib}/dist/GeoLib.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
